fix: icon alignment

--- a/src/Resources/app/administration/src/component/credit-card-logo/credit-card-logo.scss
+++ b/src/Resources/app/administration/src/component/credit-card-logo/credit-card-logo.scss
@@ -1,5 +1,5 @@
-.mollie-credit-card-logo{
-    svg{
-        vertical-align: middle;
-    }
+.mollie-credit-card-logo,
+.mollie-credit-card-text{
+    vertical-align: middle;
+    display: inline-block;
 }
